--- a/Thesis.tex
+++ b/Thesis.tex
@@ -107,7 +107,8 @@
 
 % list of figures & algorithms
 \listoffigures
-%\listofalgorithms
+\listofalgorithms
+\printglossary
 
 \cleardoublepage
 \bibliography{thesis_bibliography}
