--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -6,5 +6,5 @@
 \newacronym{cdf}{CDF}{cumulative distribution functions}
 \newacronym{KNN}{k-NN}{k-Nearest Neighbors}
 \newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
-\newacronym{AABB}{AABB tree}{axis-aligned bounding boxes}
+\newacronym{AABB}{AABB tree}{Axis-Aligned Bounding Boxes tree}
 \newacronym{ROS}{ROS}{Robot Operating System}
