--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -73,8 +73,14 @@
   note = "Last accessed: October 31st, 2014",
 }
   
-  
-  
+@article{flann_pami_2014,
+  title={Scalable Nearest Neighbor Algorithms for High Dimensional Data},
+  author={Marius Muja and David G. Lowe},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={36},
+  year={2014},
+  publisher={IEEE}
+}
   
   
   
