--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -4,7 +4,10 @@
 \newacronym{AMCL6D}{AMCL6D}{Augmented Monte Carlo Localization in six dimensions}
 \newacronym{pdf}{PDF}{probability density function}
 \newacronym{cdf}{CDF}{cumulative distribution functions}
-\newacronym{KNN}{k-NN}{k-Nearest Neighbors}
+\newacronym{knn}{k-NN}{k-Nearest Neighbors}
 \newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
 \newacronym{AABB}{AABB tree}{Axis-Aligned Bounding Boxes tree}
 \newacronym{ROS}{ROS}{Robot Operating System}
+\newacronym{kdtree}{k-d tree}{k-dimensional tree}
+\newacronym{FLANN}{FLANN}{Fast Library for Approximate Nearest Neighbors}
+\newacronym{ICP}{ICP}{Iterative Closest Point}
